--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,9 +3,9 @@ contact_links:
   - name: Bayat
     url: https://bayat.io
     about: Learn more about Bayat and find new ways to reach out
-  - name: Bayat Forums
+  - name: Forums
     url: https://forums.bayat.io
     about: Discuss about Bayat services and products
-  - name: Bayat Discord Server
+  - name: Discord
     url: https://discord.gg/X2Ag9gC2zT
     about: Join our Discord community!
