--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,13 @@
+# These are supported funding model platforms
 
+# github: username  # Replace with GitHub Sponsors-enabled username
+# patreon: bayatgames
+# open_collective: # Replace with a single Open Collective username
+# ko_fi: bayatgames
+# tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
+# community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
+# liberapay: # Replace with a single Liberapay username
+# issuehunt: # Replace with a single IssueHunt username
+# otechie: # Replace with a single Otechie username
+# lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
+custom: ['https://bayat.io/donate', 'https://assetstore.unity.com/publishers/26641']
