Update discord links

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -13,7 +13,7 @@ contact_links:
     about: Get official support from our team
   
   - name: 🎮 Discord Community
-    url: https://discord.gg/X2Ag9gC2zT
+    url: https://discord.gg/HWMqD7T
     about: Join our Discord server for real-time help and discussions
     
   - name: 🛒 Unity Asset Store
