--- a/.github/DISCUSSION_TEMPLATE/q-a.yml
+++ b/.github/DISCUSSION_TEMPLATE/q-a.yml
@@ -3,7 +3,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## Question and Answer
+        ## Bayat Games - Question and Answer
         Use this template to ask a question about our project. Be specific to help the community provide the best answer.
   
   - type: textarea
