--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,12 @@
 name: Documentation
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'docs/**'
-      - '**/*.md'
-      - '.github/workflows/docs.yml'
+#   push:
+#     branches: [ main ]
+#     paths:
+#       - 'docs/**'
+#       - '**/*.md'
+#       - '.github/workflows/docs.yml'
   pull_request:
     branches: [ main ]
     paths:
